--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@webpack-cli/serve": "^1.5.2",
     "autoprefixer": "^9.8.6",
     "postcss": "^7.0.36",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
+    "webpack-cli": "^4.3.0",
+    "webpack-dev-server": "^4.0.0"
   }
 }
