--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "@tailwindcss/forms": "^0.3.3",
+    "jquery": "^3.6.0",
+    "jquery-ujs": "^1.2.3",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
